# go-cbor-map

./: .gitignore  README.md  cmap.go  doc.sh  go.mod
cmd/wasm/wazero/cbor2mapd-w0/: main.go
cmd/wasm/wazero/cbor2mapd-w0/wasm-modules.d/: 1.wasm  rs_gzip.wasm
examples/wasm/shrink/gzip/rs-gzip/: Cargo.toml  rs_gzip.wasm
examples/wasm/shrink/gzip/rs-gzip/src/: encode2gzip.rs  lib.rs  wasm.rs
examples/wasm/shrink/gzip/rs-gzip/src/encode2gzip/: enc2gz.rs  fl2.rs
iter/cbor2iter/: cbor2iter.go
iter/cbor2iter/amacker/: cbor2arr.go
iter/iter2cbor/: iter2cbor.go
iter/iter2cbor/amacker/: arr2cbor.go
mapper/: mapper.go
mapper/bytes/: b2b.go
mapper/bytes/wasm/: b2b.go  source.go
mapper/bytes/wasm/fs/: fsrc.go
mapper/bytes/wasm/fs/std/: fsrc.go
mapper/bytes/wasm/wazero/: b2b.go
