[package]
name = "rs-gzip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
	"cdylib",
]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.flate2]
version = "1.0.34"
optional = true
default-features = false
features = [
	"rust_backend",
]

[features]
default = [
	"gz_flate2",
	"gz_wasm",
]

gz_flate2 = [
	"flate2",
]

gz_wasm = []
